Closed
Bug 723497
Opened 14 years ago
Closed 13 years ago
saving message to disk fails silently, fails to report file naming convention violation error
Categories
(Thunderbird :: Mail Window Front End, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
Thunderbird 21.0
People
(Reporter: contact, Assigned: contact)
References
Details
Attachments
(1 file, 1 obsolete file)
|
1.27 KB,
patch
|
Bienvenu
:
review+
|
Details | Diff | Splinter Review |
User Agent: Mozilla/5.0 (X11; Linux i686; rv:8.0) Gecko/20100101 Firefox/8.0
Build ID: 20111104165243
Steps to reproduce:
Saving a message on a network share (or a local folder with insufficient space/permissions) does not result in an error message dpisplayed to the user.
The error is not related to networking (in our case the CIFS kernel module reports the file naming convention violation error correctly), but to Thundbird not properly handling the error.
Attached is a patch which fixes the behaviour for Thunderbird 10 (lower versions should work, too).
Actual results:
The bug can be reproduced in the following way:
* Open Thunderbird
* New E-Mail
* Subject "Re: Test" (the double dot ist important!)
* Save as Draft
* Change to "Drafts"
* Choose "Save as"
* Change to network path
* Save *.eml file (don't remove double dot's)
* Thunderbird shows no error, but did not save the message.
The result is an empty file with the filename "Re".
Bug 346003 may be related
Expected results:
* Open Thunderbird
* New E-Mail
* Subject "Re: Test" (the double dot ist important!)
* Save as Draft
* Change to "Drafts"
* Choose "Save as"
* Change to network path
* Save *.eml file (don't remove double dot's)
* Thunderbird shows an error "Message could not be saved!"
Comment 1•14 years ago
|
||
Florian, thx for the patch! Please ask bienvenu to review it.
https://developer.mozilla.org/En/Developer_Guide/How_to_Submit_a_Patch#Getting_the_patch_reviewed
Assignee: nobody → contact
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Summary: saving message to disk fails silently → saving message to disk fails silently, fails to report file naming convention violation error
| Assignee | ||
Comment 2•14 years ago
|
||
Thanks for the pointer! I am currently building trunk and will submit a patch against it afterwards (probably tomorrow).
Comment 3•13 years ago
|
||
Florian: any update?
| Assignee | ||
Comment 4•13 years ago
|
||
Hi Magnus, sorry for the late reply - i will definitely look into it next week and keep you updated.
| Assignee | ||
Comment 5•13 years ago
|
||
Comment on attachment 593817 [details] [diff] [review]
thunderbird-error-message-if-save-as-failed.patch
Sorry for the late reply. The issue still exists in TB 17. An empty file is created and no user visible error is thrown.
Attachment #593817 -
Flags: review?(mozilla)
Attachment #593817 -
Flags: review?(bienvenu)
Comment 6•13 years ago
|
||
Comment on attachment 593817 [details] [diff] [review]
thunderbird-error-message-if-save-as-failed.patch
looks reasonable, but you probably should use NS_ENSURE_SUCCESS(rv, rv);
I haven't had a chance to run the xpcshell tests - have you done that?
Attachment #593817 -
Flags: review?(mozilla) → review+
Comment 7•13 years ago
|
||
Comment on attachment 593817 [details] [diff] [review]
thunderbird-error-message-if-save-as-failed.patch
and for checkin, you should attach a hg diff, to make it easier for someone to land this for you.
| Assignee | ||
Comment 8•13 years ago
|
||
Tested today, applied against current trunk. Please let me know if you need anything else.
Attachment #593817 -
Attachment is obsolete: true
Attachment #593817 -
Flags: review?(bienvenu)
Attachment #696992 -
Flags: review?(mozilla)
Updated•13 years ago
|
Attachment #696992 -
Flags: review?(mozilla) → review+
Updated•13 years ago
|
Comment 9•13 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Keywords: checkin-needed
Resolution: --- → FIXED
Target Milestone: --- → Thunderbird 21.0
You need to log in
before you can comment on or make changes to this bug.
Description
•