Bug 723497 - Saving message to disk fails silently, fails to report file naming convention violation error. r=dbienvenu